# YumeBot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  QQBot.sln  Readme.md  YumeBot.sln  conanfile.txt
Docs/: XposedLog.txt  libcodecwrapperV2.h  研究.md
QQBot/: Cryptography.cpp  Cryptography.h  Jce.cpp  Jce.h  QQBot.cpp  QQBot.h  QQBot.vcxproj  QQBot.vcxproj.filters  Utility.h
QQBot.Test/: CryptographyTest.cpp  QQBot.Test.cpp  QQBot.Test.vcxproj  QQBot.Test.vcxproj.filters
YumeBot/: CMakeLists.txt  Cryptography.cpp  Cryptography.h  Jce.cpp  Jce.h  JceStructDef.h  Misc.h  Request.h  Session.cpp  Session.h  Tlv.cpp  Tlv.h  TlvCodeDef.h  Utility.h  Wup.cpp  Wup.h  YumeBot.cpp  YumeBot.h  YumeBot.vcxproj  YumeBot.vcxproj.filters
YumeBot.Test/: CMakeLists.txt  CryptographyTest.cpp  JceTest.cpp  TlvTest.cpp  YumeBot.Test.cpp  YumeBot.Test.vcxproj  YumeBot.Test.vcxproj.filters  pch.h
